tree-sitter-daslang/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      // Statement types allowed at top level for ast-grep pattern matching.
      // Excludes variable_declaration_statement, typedef_statement, and
      // expression_statement to avoid ambiguity with top-level declarations.
      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.with_statement,
      $.unsafe_block,
      $.try_recover_statement,
      $.return_statement,
      $.yield_statement,
      $.break_statement,
      $.continue_statement,
      $.delete_statement,
      $.assume_statement,
      $.label_statement,
      $.goto_statement,
      $.pass_statement,
      $.reader_macro,
    ),

    module_declaration: $ => seq(
      'module',
      field('name', choice($.identifier, '$')),
      optional('shared'),
      optional(choice('public', 'private')),
      optional(seq('!', 'inscope')),
      $._semicolon,
    ),

    require_declaration: $ => seq(
      'require',
      optional(field('guard', seq('?', $.identifier))),  // optional require: `require ?guard target`
      field('module', $.require_module_name),
      optional(seq('as', field('alias', $.identifier))),
      optional('public'),
      $._semicolon,
    ),

    require_module_name: $ => seq(
      optional('%'),
      repeat(seq(choice('..', '.'), '/')),
      $.identifier,
      repeat(seq(choice('.', '/'), $.identifier)),
    ),

    options_declaration: $ => seq(
      'options',
      $.annotation_argument_list,
      $._semicolon,
    ),

    annotation_argument_list: $ => sep1($.annotation_argument, ','),

    annotation_argument: $ => seq(
      field('name', $._annotation_argument_name),
      optional(seq('=', field('value', $._annotation_argument_value))),
    ),

    _annotation_argument_name: $ => choice(
      $.identifier,
      'type',
      'in',
    ),

    _annotation_argument_value: $ => choice(
      $.string_literal,
      $.identifier,
      $.integer_literal,
      $.float_literal,
      'true',
      'false',
      seq('@@', $.identifier),  // function pointer value (e.g., @@hash)
      seq('(', sep1($._annotation_argument_value, ','), ')'),
    ),

    // Metadata annotations on fields: @name = value
    function_declaration: $ => seq(
      optional($.annotation_list),
      'def',
      optional('template'),
      optional(choice('public', 'private')),
      field('name', $.function_name),
      optional($.function_argument_list),
      optional($.function_return_type),
      $._function_body,
    ),

    // single-expression arrow body ( => expr / => <- expr ) or a brace block
    _function_body: $ => choice(
      field('body', $.block),
      seq('=>', optional('<-'), field('body', $._expression)),
    ),

    function_name: $ => choice(
      $.identifier,
      $.operator_name,
      $.basic_type,
    ),

    function_argument_list: $ => seq(
      '(',
      optional(sep1(choice($.function_argument, $.quote_expression), choice(';', ','))),
      ')',
    ),

    function_argument: $ => seq(
      optional($.metadata_argument_list),
      optional(choice('let', 'var')),
      field('name', $._variable_name_list),
      optional('&'),  // reference modifier (var name &; or var name & : type)
      optional(seq(':', field('type', $._type))),
      optional(seq(choice('=', '<-'), field('default', $._expression))),
    ),

    function_return_type: $ => seq(
      choice(':', '->'),
      field('type', $._type),
    ),

    // ========================================================================
    // Struct / class declarations
    // ========================================================================

    structure_declaration: $ => seq(
      optional($.annotation_list),
      field('kind', choice(
        'struct',
        'class',
        seq('struct', 'template'),
        seq('class', 'template'),
      )),
      optional(choice('public', 'private')),
      optional('sealed'),
      field('name', $.identifier),
      optional(seq(':', field('parent', $._name_in_namespace))),
      '{',
      repeat($.structure_member),
      '}',
      optional(';'),
    ),

    structure_member: $ => choice(
      $.structure_field,
      $.structure_method,
      $.structure_typedef,
    ),

    structure_field: $ => seq(
      optional($.metadata_argument_list),
      optional('static'),
      optional(choice('override', 'sealed')),
      optional(choice('public', 'private')),
      field('name', $._variable_name_list),
      optional(seq(':', field('type', $._type))),
      optional(seq(choice('=', '<-', ':='), field('value', $._expression))),
      $._semicolon,
    ),

    structure_method: $ => seq(
      optional($.annotation_list),
      'def',
      optional(choice('public', 'private')),
      optional('static'),
      optional(choice('override', 'sealed')),
      // const and abstract can appear in any order
      optional('abstract'),
      optional('const'),
      optional('abstract'),
      field('name', $.function_name),
      optional($.function_argument_list),
      optional($.function_return_type),
      optional(choice(
        ';',
        $._function_body,
      )),
    ),

    enum_declaration: $ => seq(
      optional($.annotation_list),
      'enum',
      optional(choice('public', 'private')),
      field('name', $.identifier),
      optional(seq(':', field('base_type', $.enum_base_type))),
      '{',
      repeat(seq($.enum_entry, optional(choice(',', ';')))),
      '}',
      optional(';'),
    ),

    enum_base_type: $ => choice(
      'int', 'int8', 'int16', 'int64',
      'uint', 'uint8', 'uint16', 'uint64',
    ),

    enum_entry: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    // ========================================================================
    // Global variable declarations
    // ========================================================================

    global_variable_declaration: $ => seq(
      choice('let', 'var'),
      optional('shared'),
      optional(choice('public', 'private')),
      choice(
        // Single declaration
        seq(
          optional($.metadata_argument_list),
          $.global_variable_binding,
        ),
        // Block of declarations
        seq('{', repeat(seq(
          optional($.metadata_argument_list),
          $.global_variable_binding,
        )), '}'),
      ),
    ),

    global_variable_binding: $ => seq(
      field('name', $._global_variable_name_list),
      choice(
        seq(':', field('type', $._type), optional(seq(choice('=', '<-', ':='), field('value', $._expression)))),
        seq(optional('&'), choice('=', '<-', ':='), field('value', $._expression)),
      ),
      $._semicolon,
    ),

    _global_variable_name_list: $ => sep1($.identifier, ','),

    // ========================================================================
    // Type alias declarations
    // ========================================================================

    typedef_declaration: $ => choice(
      // typedef Name = Type
      seq(
        optional($.annotation_list),
        'typedef',
        optional(choice('public', 'private')),
        field('name', $.identifier),
        '=',
        field('type', $._type),
        $._semicolon,
      ),
      // typedef distinct Name = Type (nominal newtype; 'distinct' is contextual, not a keyword)
      seq(
        optional($.annotation_list),
        'typedef',
        optional(choice('public', 'private')),
        'distinct',
        field('name', $.identifier),
        '=',
        field('type', $._type),
        $._semicolon,
      ),
    ),

    block: $ => prec(1, seq(
      '{',
      repeat(choice($._statement, ';')),
      '}',
      optional($.finally_block),
    )),

    _statement: $ => choice(
      $.expression_statement,
      $.variable_declaration_statement,
      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.with_statement,
      $.unsafe_block,
      $.try_recover_statement,
      $.return_statement,
      $.yield_statement,
      $.break_statement,
      $.continue_statement,
      $.delete_statement,
      $.assume_statement,
      $.typedef_statement,
      $.label_statement,
      $.goto_statement,
      $.pass_statement,
      $.block,
    ),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    _variable_name_list: $ => prec.left(sep1($._variable_name, ',')),

    return_statement: $ => prec.right(seq(
      'return',
      optional(seq(optional('<-'), $._expression)),
      optional(seq('if', '(', field('condition', $._expression), ')')),
      $._semicolon,
    )),

    _expression: $ => choice(
      $._name_in_namespace,
      $._literal,
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.null_coalescing_expression,
      $.range_expression,
      $.tuple_expression,
      $.is_expression,
      $.as_expression,
      $.call_expression,
      $.struct_constructor,
      $.method_call_expression,
      $.arrow_call_expression,
      $.pipe_expression,
      $.field_expression,
      $.safe_field_expression,
      $.index_expression,
      $.safe_index_expression,
      $.deref_expression,
      $.addr_expression,
      $.cast_expression,
      $.typeinfo_expression,
      $.type_expression,
      $.new_expression,
      $.func_addr_expression,
      $.block_expression,
      $.lambda_expression,
      $.generator_expression,
      $.array_literal,
      $.table_literal,
      $.array_comprehension,
      $.table_comprehension,
      $.fixed_array_expression,
      $.array_constructor,
      $.table_constructor,
      $.tuple_constructor,
      $.struct_make_expression,
      $.default_expression,
      $.unsafe_expression,
      $.postfix_expression,
      $.call_with_block_expression,
      $.oneliner_if_expression,
      $.reader_macro,
      $.basic_type,  // basic types can appear as expressions (e.g., x |> float)
      $.quote_expression,
      $.uninitialized_expression,
      $.bypass_index_expression,
      $.spread_expression,
      $.array_struct_expression,
      $.variant_constructor,
    ),

    unary_expression: $ => choice(
      prec.right(PREC.UNARY, seq('!', $._expression)),
      prec.right(PREC.UNARY, seq('~', $._expression)),
      prec.right(PREC.UNARY, seq('+', $._expression)),
      prec.right(PREC.UNARY, seq('-', $._expression)),
      prec.right(PREC.UNARY, seq('++', $._expression)),
      prec.right(PREC.UNARY, seq('--', $._expression)),
    ),

    binary_expression: $ => choice(
      // Arithmetic
      prec.left(PREC.ADD, seq($._expression, '+', $._expression)),
      prec.left(PREC.ADD, seq($._expression, '-', $._expression)),
      prec.left(PREC.MUL, seq($._expression, '*', $._expression)),
      prec.left(PREC.MUL, seq($._expression, '/', $._expression)),
      prec.left(PREC.MUL, seq($._expression, '%', $._expression)),
      // Shift / Rotate
      prec.left(PREC.SHIFT, seq($._expression, '<<', $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, '>>', $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, '<<<', $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, '>>>', $._expression)),
      // Comparison
      prec.left(PREC.COMPARE, seq($._expression, '<', $._expression)),
      prec.left(PREC.COMPARE, seq($._expression, '>', $._expression)),
      prec.left(PREC.COMPARE, seq($._expression, '<=', $._expression)),
      prec.left(PREC.COMPARE, seq($._expression, '>=', $._expression)),
      // Equality
      prec.left(PREC.EQUAL, seq($._expression, '==', $._expression)),
      prec.left(PREC.EQUAL, seq($._expression, '!=', $._expression)),
      // Bitwise
      prec.left(PREC.BIT_AND, seq($._expression, '&', $._expression)),
      prec.left(PREC.BIT_OR, seq($._expression, '|', $._expression)),
      prec.left(PREC.BIT_XOR, seq($._expression, '^', $._expression)),
      // Logical
      prec.left(PREC.AND, seq($._expression, '&&', $._expression)),
      prec.left(PREC.OR, seq($._expression, '||', $._expression)),
      prec.left(PREC.XOR, seq($._expression, '^^', $._expression)),
    ),

    _type: $ => choice(
      $.basic_type,
      $.named_type,
      $.auto_type,
      $.pointer_type,
      $.smart_pointer_type,
      $.array_type,
      $.table_type,
      $.iterator_type,
      $.block_type,
      $.function_type,
      $.lambda_type,
      $.tuple_type,
      $.variant_type,
      $.bitfield_type,
      $.typedecl_type,
      $.type_witness,      // type<T> — type-witness form (e.g. `t : type<auto(T)>`)
      $.option_type,
      $._type_modifier,
      $.quote_type,        // $t(type) in macro quotes
      $.type_macro,        // padded(type<T>, N) — type macros
      $.template_type,     // $TName<type;type> — template struct instantiation
    ),

    basic_type: $ => choice(...basic_types),

    type_witness: $ => seq('type', '<', field('type', $._type), '>'),

    auto_type: $ => prec.left(seq(
      'auto',
      optional(seq('(', $.identifier, ')')),
    )),

    array_type: $ => seq(
      'array',
      '<',
      $._type,
      '>',
    ),

    integer_literal: $ => token(choice(
      // Hex with suffix
      seq(/0[xX][0-9a-fA-F][0-9a-fA-F_]*/, optional(choice(
        /[uU][lL]/, /[lL]/, /[uU]8/, /[uU]/,
      ))),
      // Decimal with suffix
      seq(/[0-9][0-9_]*/, optional(choice(
        /[uU][lL]/, /[lL]/, /[uU]8/, /[uU]/,
      ))),
    )),

    // Float literals: 3.14, 3.14f, 3.14d, 3.14lf, 1e10, 1.5e-3, .5
    identifier: $ => /[#a-zA-Z_][a-zA-Z0-9_`]*/,

    _name_in_namespace: $ => choice(
      $.identifier,
      $.scoped_identifier,
    ),
